plugins {
	// Use fabric-loom (not fabric-loom-remap) for unobfuscated Minecraft 26.1+
	id 'net.fabricmc.fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

	// Modrinth Maven for ModMenu
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
	}

	// YACL Maven
	maven {
		name = "YACL"
		url = "https://maven.isxander.dev/releases"
	}

	// CurseForge Maven
	maven {
		name = "CurseForge"
		url = "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
}

loom {
	splitEnvironmentSourceSets()

	mods {
		"inventory_shulker" {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs.configureEach {
		vmArgs "--enable-native-access=ALL-UNNAMED", "--add-opens", "java.base/sun.misc=ALL-UNNAMED"
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	// No mappings for unobfuscated Minecraft 26.1+
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	// ModMenu for mod listing and configuration
	implementation "maven.modrinth:modmenu:${project.modmenu_version}"

	// YACL for configuration screen
	implementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 25
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}